# icg

./: .gitmodules  README.md
Impressionist/: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md  impressionistDoc.cpp  impressionistUI.cpp  paintView.cpp  paintView.h
Impressionist/include/: FltDesignUI.h  bitmap.h  circleBrush.h  heartBrush.h  impBrush.h  impressionist.h  impressionistDoc.h  impressionistUI.h  lineBrush.h  originalView.h  paintView.h  pointBrush.h  scatteredBrush.h  scatteredCircleBrush.h  scatteredPointBrush.h  starBrush.h  triangleBrush.h
Impressionist/src/: FltDesignUI.cpp  bitmap.cpp  circleBrush.cpp  heartBrush.cpp  impBrush.cpp  impressionist.cpp  impressionistDoc.cpp  impressionistUI.cpp  lineBrush.cpp  originalView.cpp  paintView.cpp  pointBrush.cpp  scatteredBrush.cpp  scatteredCircleBrush.cpp  scatteredPointBrush.cpp  starBrush.cpp  triangleBrush.cpp
Modeler/: .clangd  CMakeLists.txt  README.md
Modeler/include/: CImg.h  animator.h  animatoruiwindows.h  camera.h  color.h  controller.h  curve.h  curveevaluator.h  dialog.h  graphwidget.h  imageio.h  indicatorwindow.h  linearcurveevaluator.h  mat.h  model.h  modelerapp.h  modelerdraw.h  modelerui.h  modelerview.h  particleSystem.h  point.h  rect.h  rulerwindow.h  vec.h
Modeler/src/: animatoruiwindows.cxx  camera.cpp  color.cpp  curve.cpp  curveevaluator.cpp  graphwidget.cpp  imageio.cpp  indicatorwindow.cpp  linearcurveevaluator.cpp  main.cpp  modelerapp.cpp  modelerdraw.cpp  modelerui.cpp  modelerview.cpp  particleSystem.cpp  point.cpp  rect.cpp  robotarm.cpp  rulerwindow.cpp
RayTracer/: .clangd  CMakeLists.txt
RayTracer/include/: RayTracer.h  general.h  getopt.h
RayTracer/include/fileio/: CImg.h  buffer.h
RayTracer/include/object/: Box.h  Cone.h  Cylinder.h  Sphere.h  Square.h  trimesh.h
RayTracer/include/parser/: Parser.h  ParserException.h  Token.h  Tokenizer.h
RayTracer/include/scene/: BSPTree.h  camera.h  light.h  material.h  ray.h  scene.h
RayTracer/include/ui/: CommandLineUI.h  GraphicalUI.h  ModelerCamera.h  TraceGLWindow.h  TraceUI.h  debuggingView.h  debuggingWindow.h
RayTracer/include/vecmath/: mat.h  vec.h
RayTracer/src/: RayTracer.cpp  getopt.cpp  main.cpp
RayTracer/src/fileio/: buffer.cpp  imageio.cpp
RayTracer/src/object/: Box.cpp  Cone.cpp  Cylinder.cpp  Sphere.cpp  Square.cpp  trimesh.cpp
RayTracer/src/parser/: Parser.cpp  ParserException.cpp  Token.cpp  Tokenizer.cpp
RayTracer/src/scene/: camera.cpp  light.cpp  material.cpp  ray.cpp  scene.cpp
RayTracer/src/ui/: CommandLineUI.cpp  GraphicalUI.cpp  ModelerCamera.cpp  TraceGLWindow.cpp  debuggingView.cpp  debuggingWindow.cxx  glObjects.cpp
